# nexus-local

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: README.md  index.html  package-lock.json  package.json  run-web.ps1  vite.config.ts
apps/web/src/: App.tsx  api.ts  app.css  index.css  main.tsx
data/benchmarks/: latest_report.json  retrieval_benchmark.jsonl
data/fixtures/documents/: distributed_rate_limiting.md  heat_risk_engine.py  ipl_batting.csv  solar_cell_defects.txt
docs/: DATA_RETENTION.md  THREAT_MODEL.md  decision_log.md  known_limitations.md  offline_mode.md  progress.md  roadmap.md
docs/architecture/: overview.md
scripts/: import_folder.py  run_api.py  run_benchmark.py
src/nexus_local/: config.py  db.py  models.py
src/nexus_local/api/: app.py
src/nexus_local/evaluation/: grounding_eval.py  retrieval_eval.py
src/nexus_local/feedback/: service.py
src/nexus_local/ingestion/: pipeline.py
src/nexus_local/llm/: orchestrator.py  runtime_mode.py
src/nexus_local/memory/: service.py
src/nexus_local/preferences/: service.py
src/nexus_local/retrieval/: embedder.py  hybrid.py  web_search.py
src/nexus_local/security/: file_validation.py  network_guard.py
tests/: conftest.py  test_integration.py  test_unit_core.py
